# hka-predicting_future_sales

./: .gitignore  01-First_Attempt.ipynb  02-Second_Attempt.ipynb  03-Third_Attempt.ipynb  04-Fourth_Attempt.ipynb  05-Fifth_Attempt.ipynb  06-Sixth_Attempt.ipynb  ARIMA.ipynb  Compare_Models.ipynb  EDA.ipynb  In_Depth_EDA.ipynb  Linear_Regression.ipynb  Predicting Future Sales.ipynb  Predicting_Future_Sales.ipynb  README.adoc  README.md  Second Try.ipynb  Submission.ipynb  pyproject.toml
data/: README.md
data/arima/: README.md
data/feature_engineering/: README.md  cities.csv  item_categories_classified.csv
data/info/: README.md
data/submissions/: README.md
data/technical/: README.md
report/: main.tex
report/external_content/code/: lag_features.py  python_sample.py
report/reference/: acronym.tex  glossary.tex  scibib.bib
report/source/: 001-preamble_settings.tex  002-code_style.tex  008-headers_and_footers.tex  010-metadata_and_contact_info.tex  020-title.tex  021-abstract.tex  022-table_of_content.tex  030-git_references.tex  100-introduction.tex  200-eda.tex  300-fe.tex  340-lag_feature.tex  400-linear.tex  400-models.tex  500-next_steps.tex  600-conclusion.tex  930-glossary_and_acronyms.tex  940-list_of_content.tex
src/datacleaning/: ConvertingDateValues.py
src/plotting/: Defaults.py
src/test/: ReadDataFrames.py  TestDateStringFormatter.py
src/util/: DateStringFormatter.py  FunctionExecTime.py  ListActions.py  ParseDataframe.py
