[tool.poetry]
name = "predicting_future_sales"
version = "0.1.0"
description = "Research Project"
authors = ["Cédric Uden <cedric@uden.de>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.3"
numpy = "^1.20.2"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"
matplotlib = "^3.4.1"
xlrd = "^2.0.1"
autoviz = "^0.0.81"
lightgbm = "^3.2.1"
CurrencyConverter = "^0.16.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
